2004-03-20  Sven Neumann  <sven@gimp.org>
	* app/text/gimptextlayer.c (gimp_text_layer_set): use the same
	undo group logic as in the text tool. Not really necessary since
	this function must not be called on modified text layers, but it's
	more consistent this way.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12751 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
+	* app/text/gimptextlayer.c (gimp_text_layer_set): use the same
+	undo group logic as in the text tool. Not really necessary since
+	this function must not be called on modified text layers, but it's
+	more consistent this way.
+
 2004-03-20  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpvectortool.c: Assigned "b" as the default shortcut
