--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-20  Simon Budig  <simon@gimp.org>
+
+	* app/gui/select-commands.[ch]: new callbacks to convert the
+	current vector to the selection.
+
+	* app/gui/image-menu.c: hook it into the menu. Default shortcut
+	is Shift+V.
+
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
 	* app/text/gimptextlayer.c (gimp_text_layer_set): use the same
