--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-20  Jarkko Ranta  <jjranta@cc.joensuu.fi>
+
+	* fi.po: Updated Finnish translation by Mikko Paananen
+
 2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * hr.po: Updated Croatian translation.
