--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimp.sgml: removed GimpParamColor.
+
 2004-03-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
