2004-03-20  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptexttool.c (gimp_text_tool_create_vectors): don't
	take the image from tool->gdisp, this might be a NULL pointer.

	* app/core/gimpimage-undo-push.c: removed debugging output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12758 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptexttool.c (gimp_text_tool_create_vectors): don't
+	take the image from tool->gdisp, this might be a NULL pointer.
+
+	* app/core/gimpimage-undo-push.c: removed debugging output.
+
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimppropwidgets.c (gimp_prop_size_entry_callback):
 	avoid to set the unit property with every size change; only set it
 	if it actually changed.
