--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
+	* app/text/gimptextlayer.c: it wasn't such a good idea to let
+	GimpConfig take care of the text when duplicating a text layer; it
+	didn't create a copy. Do that manually again; fixes bug #137786.
+	
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptexttool.c (gimp_text_tool_create_vectors): don't
 	take the image from tool->gdisp, this might be a NULL pointer.
 
