--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-2
+
             The GNU Image Manipulation Program Version 1.3
                           A Colorspace Odyssey
 
@@ -7,8 +7,8 @@ GIMP 1.3 is the development branch of The GIMP. Here's where the
 development takes place on the road to the next stable release
 GIMP version 2.0.
 
-Bugs fixed since the last release
-=================================
+Bugs fixed in GIMP 2.0rc1
+=========================
 - 136124: count animation frames starting with 1 (Simon)
 - 122519: allow to share paint options between tools (Mitch)
 - 136227: allow to toggle the histogram scale from the tool dialogs (Sven)
@@ -41,6 +41,20 @@ Bugs fixed since the last release
 - 137076: don't discard session info for dialogs hidden with Tab (Mitch)
 - 124176: use a counter to track undo_[freeze|thaw] (Simon)
 - 128833: don't make tool dialogs transient to the image window (Sven)
+- 64835:  on startup test if a swap file can be created (Simon, Raphael)
+- 136909, 137242, 81479: update the menus when a plug-in finished (Simon)
+- 137435: fixed sort order in plug-in menus for broken locales (Simon)
+- 137529: don't crash on invalid brush hoses (Simon)
+- 136996: search help pages in the users locale (Sven)
+- 137151: make accelerators work in gtk+-2.4 if there's no menubar (Mitch)
+- 136623, 136645: properly handle modifications to text layers (Sven)
+- 130985, 120021: implemented text undo (Sven)
+- 137612: improve tooltips for GimpScaleEntry (Sven)
+- 137737: show all user interface elements in the Jigsaw plug-in (Sven)
+- 137753: added a shortcut for the Path tool (Simon)
+- 137754: added a menu entry and shortcut for "Path to Selection" (Simon)
+- 137170: fixed crash with floating selections on quick-mask (Simon, Sven)
+- 137786: duplicate the text when duplicating a text layer (Sven)
 
 
 Bugs fixed in GIMP 2.0pre4
