--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-20  Simon Budig  <simon@gimp.org>
+
+	* app/.cvsignore
+	* docs/.cvsignore
+	* tools/.cvsignore: updated to ignore 2.0 stuff  :-)
+
 2004-03-20  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	Fixed several off-by-one problems in display:
