--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-21  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * hr.po: Updated Croatian translation.
