2004-03-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpthumbbox.c: modify the event_box and preview
	styles in GtkWidget::style_set() instead of in
	gimp_thumb_box_new() so they follow theme changes correctly and
	the labels stay visible when switching to an "inverse" theme.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12767 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpthumbbox.c: modify the event_box and preview
+	styles in GtkWidget::style_set() instead of in
+	gimp_thumb_box_new() so they follow theme changes correctly and
+	the labels stay visible when switching to an "inverse" theme.
+
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
 	* Made 2.0rc1 release.
