--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-21  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/debug-commands.h: corrected #define for the debug menu.
+
 2004-03-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpthumbbox.c: modify the event_box and preview
