--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/helpbrowser/dialog.c: fixed check that suppresses
+	unnecessary reloads of the current page.
+
+2004-03-21  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/debug-commands.h: corrected #define for the debug menu.
 
 2004-03-21  Michael Natterer  <mitch@gimp.org>
