2004-03-21  Michael Natterer  <mitch@gimp.org>
	* libgimpbase/makefile.msc:
	* libgimpmodule/makefile.msc: s/1.3/2.0/g


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12774 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-21  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpbase/makefile.msc: 
+	* libgimpmodule/makefile.msc: s/1.3/2.0/g
+
+2004-03-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/display/gimpdisplayshell-callbacks.c
 	(gimp_display_shell_events): added run-time version
 	check and do the workaround for bug #136636 only if
