2004-03-21  Duarte Loreto <happyguy_pt@hotmail.com>
	* pt.po: Updated Portuguese translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12775 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/pt.po
+++ b/po-libgimp/pt.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.6\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2004-03-08 21:30+0000\n"
+"Report-Msgid-Bugs-To: Duarte Loreto <happyguy_pt@hotmail.com>\n"
+"POT-Creation-Date: 2004-03-21 20:18+0000\n"
+"PO-Revision-Date: 2004-03-21 20:20+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -410,14 +410,12 @@ msgid "GigaBytes"
 msgstr "GigaBytes"
 
 #: libgimpwidgets/gimppatheditor.c:243
-#, fuzzy
 msgid "Writable"
-msgstr "Triângulo"
+msgstr "Com Permissões de Escrita"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "Seleccionar Pasta"
+msgstr "Pasta"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
