--- a/po/pt.po
+++ b/po/pt.po
@@ -13,9 +13,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.6\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:18+0100\n"
-"PO-Revision-Date: 2004-03-08 21:15+0000\n"
+"Report-Msgid-Bugs-To: Duarte Loreto <happyguy_pt@hotmail.com>\n"
+"POT-Creation-Date: 2004-03-21 20:06+0000\n"
+"PO-Revision-Date: 2004-03-21 20:15+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -41,6 +41,9 @@ msgid ""
 "location and permissions of the swap directory defined in your Preferences "
 "(currently \"%s\")."
 msgstr ""
+"Incapaz de abrir um ficheiro swap de teste. Para evitar a perca de dados "
+"verifique a localização e permissões do directório de swap definido nas "
+"suas Preferências (actualmente \"%s\")."
 
 #: app/app_procs.c:275
 #, c-format
@@ -1376,14 +1379,12 @@ msgid "Change Indexed Palette"
 msgstr "Alterar Paleta Indexada"
 
 #: app/core/core-enums.c:621
-#, fuzzy
 msgid "Drawable"
-msgstr "Deslocamento Desenhável"
+msgstr "Desenhável"
 
 #: app/core/core-enums.c:622
-#, fuzzy
 msgid "Drawable Mod"
-msgstr "Procedimentos de desenho"
+msgstr "Alteração Desenhável"
 
 #: app/core/core-enums.c:624
 msgid "Rename Item"
@@ -2752,9 +2753,8 @@ msgid "%s Channel Copy"
 msgstr "Cópia de Canal %s"
 
 #: app/gui/channels-commands.c:322
-#, fuzzy
 msgid "Empty Channel"
-msgstr "Cópia de Canal Vazia"
+msgstr "Canal Vazio"
 
 #: app/gui/channels-commands.c:338
 msgid "New Channel Color"
@@ -3847,7 +3847,6 @@ msgid "Scale Error: Both width and height must be greater than zero."
 msgstr "Erro de Escala: largura e altura devem ser maiores que zero."
 
 #. <Image>/File
-#. <Toolbox>/File
 #: app/gui/image-menu.c:101 app/gui/toolbox-menu.c:49
 msgid "/_File"
 msgstr "/_Ficheiro"
@@ -3861,7 +3860,6 @@ msgid "/File/_Open..."
 msgstr "/Ficheiro/_Abrir..."
 
 #. <Image>/File/Open Recent
-#. <Toolbox>/File/Open Recent
 #: app/gui/image-menu.c:116 app/gui/toolbox-menu.c:64
 msgid "/File/Open _Recent"
 msgstr "/Ficheiro/Abrir _Recente"
@@ -3998,9 +3996,8 @@ msgid "/Select/_Invert"
 msgstr "/Seleccionar/_Inverter"
 
 #: app/gui/image-menu.c:292
-#, fuzzy
 msgid "/Select/Fr_om Path"
-msgstr "/Seleccionar/_Para Caminho"
+msgstr "/Seleccionar/De Caminh_o"
 
 #: app/gui/image-menu.c:297
 msgid "/Select/_Float"
@@ -4894,9 +4891,8 @@ msgid "Layer Mask to Selection"
 msgstr "Máscara de Camada para Selecção"
 
 #: app/gui/layers-commands.c:723
-#, fuzzy
 msgid "Empty Layer"
-msgstr "Camada Texto Vazia"
+msgstr "Camada Vazia"
 
 #: app/gui/layers-commands.c:747
 msgid "Create a New Layer"
@@ -4936,9 +4932,8 @@ msgid "Layer _Name"
 msgstr "_Nome Camada"
 
 #: app/gui/layers-commands.c:1009
-#, fuzzy
 msgid "Set Name from _Text"
-msgstr "Criar Caminho de Texto"
+msgstr "Seleccionar Nome do _Texto"
 
 #: app/gui/layers-commands.c:1096
 msgid "Add a Mask to the Layer"
@@ -6148,7 +6143,6 @@ msgid "Original Width:"
 msgstr "Largura Original:"
 
 #. the new size labels
-#. the print size labels
 #: app/gui/resize-dialog.c:318 app/gui/resize-dialog.c:564
 msgid "New Width:"
 msgstr "Nova Largura:"
@@ -6364,44 +6358,36 @@ msgid "Enter a new name for the saved options"
 msgstr "Introduza um novo nome para as opções gravadas"
 
 #: app/gui/tool-options-menu.c:58
-#, fuzzy
 msgid "/_Save Options to"
-msgstr "Opções Gravadas"
+msgstr "/_Gravar Opções para"
 
 #: app/gui/tool-options-menu.c:60
-#, fuzzy
 msgid "/Save Options to/_New Entry..."
-msgstr "/_Gravar Opções para/_Nova Entrada..."
+msgstr "/Gravar Opções para/_Nova Entrada..."
 
 #: app/gui/tool-options-menu.c:71
-#, fuzzy
 msgid "/_Restore Options from"
-msgstr "/_Repor Opções de/(Nenhuma)"
+msgstr "/_Repor Opções de"
 
 #: app/gui/tool-options-menu.c:73
-#, fuzzy
 msgid "/Restore Options from/(None)"
-msgstr "/_Repor Opções de/(Nenhuma)"
+msgstr "/Repor Opções de/(Nenhuma)"
 
 #: app/gui/tool-options-menu.c:79
-#, fuzzy
 msgid "/Re_name Saved Options"
-msgstr "/Re_nomear Opções Gravadas/(Nenhuma)"
+msgstr "/Re_nomear Opções Gravadas"
 
 #: app/gui/tool-options-menu.c:81
-#, fuzzy
 msgid "/Rename Saved Options/(None)"
-msgstr "/Re_nomear Opções Gravadas/(Nenhuma)"
+msgstr "/Renomear Opções Gravadas/(Nenhuma)"
 
 #: app/gui/tool-options-menu.c:87
-#, fuzzy
 msgid "/_Delete Saved Options"
-msgstr "/Re_mover Opções Gravadas/(Nenhuma)"
+msgstr "/Re_mover Opções Gravadas"
 
 #: app/gui/tool-options-menu.c:89
-#, fuzzy
 msgid "/Delete Saved Options/(None)"
-msgstr "/Re_mover Opções Gravadas/(Nenhuma)"
+msgstr "/Remover Opções Gravadas/(Nenhuma)"
 
 #: app/gui/tool-options-menu.c:98
 msgid "/R_eset Tool Options"
@@ -6978,9 +6964,8 @@ msgid "Calibrate"
 msgstr "Calibrar"
 
 #: app/gui/vectors-commands.c:444
-#, fuzzy
 msgid "Empty Path"
-msgstr "Importar Caminhos"
+msgstr "Caminho Vazio"
 
 #: app/gui/vectors-commands.c:458 app/gui/vectors-commands.c:506
 msgid "New Path"
@@ -6991,7 +6976,6 @@ msgid "New Path Options"
 msgstr "Novas Opções de Caminho"
 
 #. The name entry hbox, label and entry
-#. The name entry
 #: app/gui/vectors-commands.c:495 app/gui/vectors-commands.c:613
 msgid "Path name:"
 msgstr "Nome caminho:"
@@ -7889,7 +7873,6 @@ msgid "Origin X:"
 msgstr "Origem X:"
 
 #. the pixel size labels
-#. the unit size labels
 #: app/tools/gimpcroptool.c:999 app/tools/gimpselectionoptions.c:565
 #: app/widgets/gimptemplateeditor.c:235 app/widgets/gimptemplateeditor.c:253
 msgid "Width:"
@@ -8116,7 +8099,7 @@ msgstr "Modificar Cor Seleccionada"
 msgid "R_eset Color"
 msgstr "R_edefinir Cor"
 
-#: app/tools/gimpimagemaptool.c:243 app/widgets/gimpthumbbox.c:187
+#: app/tools/gimpimagemaptool.c:243 app/widgets/gimpthumbbox.c:206
 msgid "_Preview"
 msgstr "_Antevisão"
 
@@ -8656,7 +8639,7 @@ msgstr "Editor Texto GIMP"
 
 #: app/tools/gimptexttool.c:757 app/tools/gimptexttool.c:760
 msgid "Confirm Text Editing"
-msgstr ""
+msgstr "Confirmar Edição de Texto"
 
 #: app/tools/gimptexttool.c:781
 msgid ""
@@ -8666,6 +8649,12 @@ msgid ""
 "\n"
 "You can edit the layer or create a new text layer from its text attributes."
 msgstr ""
+"A camada que seleccionou é uma camada de texto mas foi alterada utilizando "
+"outras ferramentas. Editar a camada com a ferramenta de texto irá "
+"descartar estas alterações.\n"
+"\n"
+"Pode editar a camada ou criar uma nova camada de texto a partir dos seus "
+"atributos de texto."
 
 #: app/tools/gimpthresholdtool.c:93
 msgid "Reduce image to two colors using a threshold"
@@ -8692,9 +8681,8 @@ msgid "Transform Direction"
 msgstr "Direcção de Transformação"
 
 #: app/tools/gimptransformoptions.c:353
-#, fuzzy
 msgid "Supersampling"
-msgstr "Super-Amostragem Adaptativa"
+msgstr "Super-Amostragem"
 
 #. the clip resulting image toggle button
 #: app/tools/gimptransformoptions.c:358
@@ -8976,11 +8964,13 @@ msgid "Delete"
 msgstr "Remover"
 
 #: app/widgets/gimpchanneltreeview.c:121
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "New Channel\n"
 "%s New Channel Dialog"
-msgstr "Nova Cor de Canal"
+msgstr ""
+"Novo Canal\n"
+"Diálogo de Novo Canal de %s"
 
 #: app/widgets/gimpchanneltreeview.c:123
 msgid "Duplicate Channel"
@@ -9539,6 +9529,8 @@ msgid ""
 "New Layer\n"
 "%s  New Layer Dialog"
 msgstr ""
+"Nova Camada\n"
+"Diálogo de Nova Camada de %s"
 
 #: app/widgets/gimplayertreeview.c:209
 msgid "Duplicate Layer"
@@ -9696,7 +9688,7 @@ msgstr "Abrir Ficheiro Texto (UTF-8)"
 msgid "Invalid UTF-8 data in file '%s'."
 msgstr "Dados UTF-8 inválidos no ficheiro '%s'."
 
-#: app/widgets/gimpthumbbox.c:170
+#: app/widgets/gimpthumbbox.c:189
 #, c-format
 msgid ""
 "Click to update preview\n"
@@ -9705,11 +9697,11 @@ msgstr ""
 "Clique para actualizar antevisão\n"
 "%s  Clique para forçar actualização mesmo que antevisão esteja actualizada"
 
-#: app/widgets/gimpthumbbox.c:239 app/widgets/gimpthumbbox.c:285
+#: app/widgets/gimpthumbbox.c:250 app/widgets/gimpthumbbox.c:296
 msgid "No Selection"
 msgstr "Sem Selecção"
 
-#: app/widgets/gimpthumbbox.c:371 app/widgets/gimpthumbbox.c:391
+#: app/widgets/gimpthumbbox.c:382 app/widgets/gimpthumbbox.c:402
 #, c-format
 msgid "Thumbnail %d of %d"
 msgstr "Imagem de Referência %d de %d"
@@ -9805,6 +9797,8 @@ msgid ""
 "New Path\n"
 "%s New Path Dialog"
 msgstr ""
+"Novo Caminho\n"
+"Diálogo de Novo Caminho de %s"
 
 #: app/widgets/gimpvectorstreeview.c:133
 msgid "Duplicate Path"
